# federated-face-recognition

./: .gitignore  README.md  pyproject.toml
federated_face_recognition/: __init__.py  client_app.py  task.py
src/federated_face_recognition/: server_app.py  test_model.py
thesis/: presentation_federated_face_recognition_flower.pptx
